--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <main class="main">
     <div class="mainvisual">
-      <div class="main-text">
+      <div class="main-text an fade_up">
         <h1>MUSIC LIVE<small>-festival-</small></h1>
         <h1>Aug 13 sat - 14 sun, 2022</h1>
         <p>〒さいたまスーパーアリーナ</p>
@@ -68,7 +68,7 @@
 
 
     <section id="news">
-      <div class="news">
+      <div class="news an fade_up">
         <div class="news-top flex">
           <div class="flex">
             <img src="img/news-1.jpg" alt="ARTIST発表">
@@ -126,13 +126,13 @@
 
     <section id="artist">
       <div class="artist">
-        <div class="flex">
+        <div class="flex an fade_up">
           <h1 class="contents-title">ARTIST</h1>
           <img src="img/onpu1.png" alt="音符" class="onpu1">
           <img src="img/onpu2.png" alt="音符" class="onpu2">
           <img src="img/onpu3.png" alt="音符" class="onpu3">
         </div>
-        <ul class="artist-list flex">
+        <ul class="artist-list flex an fade_up">
           <li><a href="#">
             <img src="img/artist2.png" alt="artist">
             <h2 class="artist-name">ALiN</h2>
@@ -225,13 +225,13 @@
         </ul>
 
         <div id="supecialartist">
-          <div class="flex sp-artist">
+          <div class="flex sp-artist an fade_up">
             <h1 class="contents-title">SUPECIAL ARTIST</h1>
             <img src="img/onpu4.png" alt="音符" class="onpu1">
             <img src="img/onpu5.png" alt="音符" class="onpu2">
             <img src="img/onpu6.png" alt="音符" class="onpu3">
           </div>          
-          <ul class="artist-list flex">
+          <ul class="artist-list flex an fade_up">
             <li>
               <a href="#">
                 <img src="img/artist17.png" alt="supecialartist">
@@ -252,15 +252,15 @@
 
     <section id="timetable">
       <div class="timetable">
-        <div class="flex">
+        <div class="flex an fade_up">
           <h1 class="contents-title">TIME TABLE</h1>
-          <img src="img/onpu7.png" alt="音符" class="onpu2">
+          <img src="img/onpu7.png" alt="音符" class="onpu1">
           <img src="img/onpu8.png" alt="音符" class="onpu2">
           <img src="img/onpu9.png" alt="音符" class="onpu3">
         </div>
-        <h2 class="timetable-date">8.13 sat.</h2>
-        <h3 class="time1">14:00～</h3>
-        <ul class="timetable-list flex">
+        <h2 class="timetable-date an fade_up">8.13 sat.</h2>
+        <h3 class="time1 an fade_up">14:00～</h3>
+        <ul class="timetable-list flex an fade_up">
           <li class="pm2">
             <h4>ALiN<br><small>所要時間：約 25分</small></h4>
           </li>
@@ -275,8 +275,8 @@
           </li>
         </ul>
 
-        <h3 class="time2">16:00～</h3>
-        <ul class="timetable-list flex">
+        <h3 class="time2 an fade_up">16:00～</h3>
+        <ul class="timetable-list flex an fade_up">
           <li class="pm4">
             <h4>カナリア<br><small>所要時間：約 20分</small></h4>
           </li>
@@ -291,8 +291,8 @@
           </li>
         </ul>
 
-        <h3 class="time1">18:00～</h3>
-        <ul class="timetable-list flex">
+        <h3 class="time1 an fade_up">18:00～</h3>
+        <ul class="timetable-list flex an fade_up">
           <li class="pm6">
             <h4>Nakata Kazutomo<br><small>所要時間：約 40分</small></h4>
           </li>
@@ -302,9 +302,9 @@
         </ul>
 
 
-        <h2 class="timetable-date">8.14 sun.</h2>
-        <h3 class="time1">14:00～</h3>
-        <ul class="timetable-list flex">
+        <h2 class="timetable-date an fade_up">8.14 sun.</h2>
+        <h3 class="time1 an fade_up">14:00～</h3>
+        <ul class="timetable-list flex an fade_up">
           <li class="pm2">
             <h4>じゅんいち<br><small>所要時間：約 25分</small></h4>
           </li>
@@ -319,8 +319,8 @@
           </li>
         </ul>
         
-        <h3 class="time2">16:00～</h3>
-        <ul class="timetable-list flex">
+        <h3 class="time2 an fade_up">16:00～</h3>
+        <ul class="timetable-list flex an fade_up">
           <li class="pm4">
             <h4>I-R<br><small>所要時間：約 20分</small></h4>
           </li>
@@ -335,8 +335,8 @@
           </li>
         </ul>
 
-        <h3 class="time1">18:00～</h3>
-        <ul class="timetable-list flex">
+        <h3 class="time1 an fade_up">18:00～</h3>
+        <ul class="timetable-list flex an fade_up">
           <li class="pm6">
             <h4>Nakata Kazutomo<br><small>所要時間：約 40分</small></h4>
           </li>
@@ -354,50 +354,50 @@
 
     <section id="food">
       <div class="food">
-        <div class="flex">
+        <div class="flex an fade_up">
           <h1 class="contents-title">FOOD</h1>
           <img src="img/onpu16.png" alt="音符" class="onpu1">
           <img src="img/onpu17.png" alt="音符" class="onpu2">
           <img src="img/onpu15.png" alt="音符" class="onpu3">
         </div>        
         <div class="flex">
-          <div class="menu">
+          <div class="menu an fade_up">
             <img src="img/ramen.png" alt="ramen">
             <h2 class="shop-name">丸助</h2>
             <p>豚骨らーめん</p>
             <p class="price">700～</p>
           </div>
-          <div class="menu">
+          <div class="menu an fade_up">
             <img src="img/yakitori.png" alt="yakitori">
             <h2 class="shop-name">焼き鳥  よっちゃん</h2>
             <p>もも・皮</p>
             <p class="price">130～</p>
           </div>
-          <div class="menu">
+          <div class="menu an fade_up">
             <img src="img/yakisoba.png" alt="yakisoba">
             <h2 class="shop-name">東屋</h2>
             <p>焼きそば</p>
             <p class="price">500～</p>
           </div>
-          <div class="menu">
+          <div class="menu an fade_up">
             <img src="img/hamburger.png" alt="hamburger">
             <h2 class="shop-name">Es</h2>
             <p>ハンバーガー</p>
             <p class="price">900～</p>
           </div>
-          <div class="menu">
+          <div class="menu an fade_up">
             <img src="img/sandwich.png" alt="sandwich">
             <h2 class="shop-name">Café  alice</h2>
             <p>野菜たっぷりサンド</p>
             <p class="price">600～</p>
           </div>
-          <div class="menu">
+          <div class="menu an fade_up">
             <img src="img/udon.png" alt="udon">
             <h2 class="shop-name">どんぷく</h2>
             <p>ぶっかけうどん</p>
             <p class="price">550～</p>
           </div>
-          <div class="menu">
+          <div class="menu an fade_up">
             <img src="img/tapioka.png" alt="tapioka">
             <h2 class="shop-name">juicy park</h2>
             <p>タピオカミルクティー</p>
@@ -409,8 +409,8 @@
 
 
     <section id="goods">
-      <div class="goods">
-        <div class="flex">
+      <div class="goods an fade_up">
+        <div class="flex an fade_up">
           <h1 class="contents-title">GOODS</h1>
           <img src="img/onpu13.png" alt="音符" class="onpu1">
           <img src="img/onpu14.png" alt="音符" class="onpu2">
@@ -431,13 +431,13 @@
 
     <section id="access">
       <div class="access">
-        <div class="flex">
+        <div class="flex an fade_up">
           <h1 class="contents-title">ACCESS</h1>
           <img src="img/onpu1.png" alt="音符" class="onpu1">
           <img src="img/onpu2.png" alt="音符" class="onpu2">
           <img src="img/onpu3.png" alt="音符" class="onpu3">
         </div>
-        <div class="info">
+        <div class="info an fade_up">
           <h2>〒330-9111 <span>埼玉県さいたま市中央区新都心８</span></h2>
           <h2 class="tel">TEL:048-601-1122</h2>
 
@@ -449,14 +449,14 @@
 
     <section id="notice">
       <div class="notice">
-        <div class="flex">
+        <div class="flex an fade_up">
           <h1 class="contents-title">NOTICE</h1>
           <img src="img/onpu18.png" alt="音符" class="onpu1">
           <img src="img/onpu19.png" alt="音符" class="onpu2">
           <img src="img/onpu5.png" alt="音符" class="onpu3">
         </div>
 
-        <div class="notice-list">
+        <div class="notice-list an fade_up">
           <p class="notice-text">
             本公演は、新型コロナウイルス感染症対策を徹底し、会場や自治体などのガイドラインに沿って開催致します。感染対策に関するガイドラインはこちらをご確認ください。
           </p>
@@ -542,7 +542,7 @@
   <footer id="sns">
     <div id="page-top"><a href="index.html">PAGE TOP</a></div> 
 
-    <div class="sns">
+    <div class="sns an fade_up">
       <h1 class="footer-title">SHARE ON SNS</h1>
       <div class="flex">
         <h2><a href="#">Twitter</a></h2>
@@ -551,7 +551,7 @@
       </div>
     </div>
 
-    <div class="copyright">
+    <div class="copyright an fade_up">
       <div class="flex">
         <p><a href="#">プライバシーポリシー</a></p>
         <p><a href="#">お問い合わせ</a></p>
@@ -562,6 +562,7 @@
 
 	<!--  jquery本体  -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.js"></script>
   <script src="script.js"></script>
    
     
@@ -641,5 +642,6 @@
 			});
 		});	
 	</script>
+  
 </body>
 </html>
